[package]
name = "envoy-wasm-filters"
version = "0.1.0"
edition = "2021"

[lib]
name = "httpfilters"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[features]
default = ["sidecar"]
sidecar = []
gateway = []
rate-limit = []

[profile.release]
opt-level = "s"      # Optimize for size (WASM modules should be small)
lto = true          # Enable link-time optimization
strip = true        # Strip debug symbols

